...
        android:layout_marginEnd="86dp"
        android:fontFamily="@font/aladin"
        android:text="LocateME!"
        android:textSize="60sp" />

    <Button
        android:id="@+id/findPlacesButton"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="1dp"
...
        android:text="Find Places"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/placeLocationEditText"
        android:background="@color/colorTextIcons"
        android:layout_above="@+id/findPlacesButton"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:hint="Enter Zip Code"
        android:layout_centerHorizontal="true" />
...
